; ModuleID = '/home/carl/AnghaBench/qmk_firmware/users/tominabox1/extr_tominabox1.c_dance_cln_finished.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/users/tominabox1/extr_tominabox1.c_dance_cln_finished.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@KC_2 = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [21 x i8] c"tom.campie@gmail.com\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dance_cln_finished(%struct.TYPE_3__* %0, i8* %1) #0 {
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i8*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = icmp eq i32 %7, 1
  br i1 %8, label %9, label %13

9:                                                ; preds = %2
  %10 = load i32, i32* @KC_2, align 4
  %11 = call i32 @S(i32 %10)
  %12 = call i32 @register_code16(i32 %11)
  br label %15

13:                                               ; preds = %2
  %14 = call i32 @SEND_STRING(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0))
  br label %15

15:                                               ; preds = %13, %9
  ret void
}

declare dso_local i32 @register_code16(i32) #1

declare dso_local i32 @S(i32) #1

declare dso_local i32 @SEND_STRING(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
